--- a/boot-h2/src/main/resources/application.properties
+++ b/boot-h2/src/main/resources/application.properties
@@ -2,9 +2,8 @@ spring.banner.location=banner.txt
 
 java.version=1.8
 
-#spring.datasource.url=jdbc:h2:mem:~/app_db;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:file:./app_db;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.url=jdbc:h2:file:~/yourdbname;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=TRUE;DB_CLOSE_DELAY=-1;
+#spring.datasource.url=jdbc:h2:mem:~/app_db;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS JOWL
+spring.datasource.url=jdbc:h2:file:./app_db;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;INIT=CREATE SCHEMA IF NOT EXISTS JOWL
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
